# flow-features

./: CMakeLists.txt  README.md  build.sh
core/: CMakeLists.txt  exception.cpp
data/: CMakeLists.txt  basedatabox.cpp  basedatabox.hpp  of2databox.cpp  of2databox.hpp  sf2databox.cpp  sf2databox.hpp
descriptor/: CMakeLists.txt  amplitudedescriptor.cpp  amplitudedescriptor.hpp  angledescriptor.cpp  angledescriptor.hpp  basedescriptor.cpp  basedescriptor.hpp
file/: CMakeLists.txt  basefilereader.hpp  basefilewriter.hpp  diagfile.cpp  diagfile.hpp  extrinsicfile.cpp  extrinsicfile.hpp  flofile.cpp  flofile.hpp  histogramfile.cpp  histogramfile.hpp  inputsequence.cpp  inputsequence.hpp  intrinsicfile.cpp  intrinsicfile.hpp  selectorfile.cpp  selectorfile.hpp
opticalflow/: CMakeLists.txt  opticalflow.cpp  opticalflow.hpp  opticalflowvideo.cpp  opticalflowvideo.hpp
opticalflowfeatures/: main.cpp
opticalflowfeatures2/: config.hpp.in  main.cpp
pdflow/: CMakeLists.txt  pdflow_cudalib.cu  scene_flow_impair.cpp  scene_flow_impair.h
sceneflowfeatures/: config.hpp.in  main.cpp
sceneflowfeatures2/: main.cpp
terminal/: CMakeLists.txt  abstractterminalparser.cpp  abstractterminalparser.hpp  of2terminalparser.cpp  of2terminalparser.hpp  ofterminalparser.cpp  ofterminalparser.hpp  sf2terminalparser.cpp  sf2terminalparser.hpp  sfterminalparser.cpp  sfterminalparser.hpp
tests/: histogramTest.cpp
time/: CMakeLists.txt  basetimer.cpp  timefilereader.cpp  timefilereader.hpp  timefilewriter.cpp  timefilewriter.hpp  videotimer.cpp  videotimer.hpp
tracker/: CMakeLists.txt  basetrackerfile.cpp  basetrackerfile.hpp  of2trackerfile.cpp  of2trackerfile.hpp  sf2trackerfile.cpp  sf2trackerfile.hpp  tracker.cpp  tracker.hpp
util/: CMakeLists.txt  amplitudefactor.cpp  amplitudefactor.hpp  cameracalib.cpp  cameracalib.hpp  cameraselector.cpp  cameraselector.hpp  depthimage.cpp  depthimage.hpp  flo.cpp  flo.hpp  framespeed.cpp  framespeed.hpp  roi.cpp  roi.hpp  scaler.cpp  userinteraction.cpp  velocitymatrix.cpp  velocitymatrix.hpp
