FILE(GLOB CPP *.cpp)
FILE(GLOB HPP *.hpp)

ADD_LIBRARY(${CORE_LIB} ${CPP} ${HPP})

TARGET_LINK_LIBRARIES(${CORE_LIB})

INSTALL(TARGETS ${CORE_LIB}
    LIBRARY DESTINATION ${LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE DESTINATION ${ARCHIVE_OUTPUT_DIRECTORY}
    )
INSTALL(FILES ${HPP} DESTINATION ${INCLUDE_OUTPUT_DIRECTORY})
