FILE(GLOB CPP *.cpp)
FILE(GLOB HPP *.hpp)

CUDA_ADD_LIBRARY(${DATA_LIB} ${CPP} ${HPP})

TARGET_LINK_LIBRARIES(${DATA_LIB}
${OpenCV_LIBS}
${CORE_LIB} ${FILE_LIB} ${OPTICAL_FLOW_LIB} ${PDFLOW_LIB} ${TIME_LIB} ${UTIL_LIB}
)

INSTALL(TARGETS ${DATA_LIB}
    LIBRARY DESTINATION ${LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE DESTINATION ${ARCHIVE_OUTPUT_DIRECTORY}
    )
INSTALL(FILES ${HPP} DESTINATION ${INCLUDE_OUTPUT_DIRECTORY})
