FILE(GLOB CPP *.cpp)
FILE(GLOB HPP *.hpp)

ADD_LIBRARY(${DESCRIPTOR_LIB} ${CPP} ${HPP})

TARGET_LINK_LIBRARIES(${DESCRIPTOR_LIB} 
${OpenCV_LIBS} 
${CORE_LIB})

INSTALL(TARGETS ${DESCRIPTOR_LIB}
    LIBRARY DESTINATION ${LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE DESTINATION ${ARCHIVE_OUTPUT_DIRECTORY}
    )
INSTALL(FILES ${HPP} DESTINATION ${INCLUDE_OUTPUT_DIRECTORY})
