FILE(GLOB CPP *.cpp)
FILE(GLOB HPP *.hpp)

ADD_LIBRARY(${FILE_LIB} ${CPP} ${HPP})

TARGET_LINK_LIBRARIES(${FILE_LIB} 
${Boost_LIBRARIES} ${OpenCV_LIBS}
${CORE_LIB})

INSTALL(TARGETS ${FILE_LIB}
    LIBRARY DESTINATION ${LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE DESTINATION ${ARCHIVE_OUTPUT_DIRECTORY}
    )

INSTALL(FILES ${HPP} DESTINATION ${INCLUDE_OUTPUT_DIRECTORY})
