FILE(GLOB CPP *.cpp)
FILE(GLOB HPP *.hpp)
ADD_LIBRARY(${OPTICAL_FLOW_LIB} ${CPP} ${HPP})

TARGET_LINK_LIBRARIES(${OPTICAL_FLOW_LIB} 
${OpenCV_LIBS} 
${CORE_LIB} ${FILE_LIB} ${UTIL_LIB})

INSTALL(TARGETS ${OPTICAL_FLOW_LIB}
    LIBRARY DESTINATION ${LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE DESTINATION ${ARCHIVE_OUTPUT_DIRECTORY}
    )

INSTALL(FILES ${HPP} DESTINATION ${INCLUDE_OUTPUT_DIRECTORY})

