FILE(GLOB CPP *.cpp)
FILE(GLOB HPP *.hpp)
FILE(GLOB CU *.cu)
CUDA_ADD_LIBRARY(${PDFLOW_LIB} ${CPP} ${CU} ${HPP})

TARGET_LINK_LIBRARIES(${PDFLOW_LIB} 
${OpenCV_LIBS} ${CUDA_LIBRARIES})

INSTALL(TARGETS ${PDFLOW_LIB}
    LIBRARY DESTINATION ${LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE DESTINATION ${ARCHIVE_OUTPUT_DIRECTORY}
    )
INSTALL(FILES ${HPP} DESTINATION ${INCLUDE_OUTPUT_DIRECTORY})
