FILE(GLOB CPP *.cpp)
FILE(GLOB HPP *.hpp)

ADD_LIBRARY(${TERMINAL_LIB} ${CPP} ${HPP})

TARGET_LINK_LIBRARIES(${TERMINAL_LIB} 
${Boost_LIBRARIES} 
${CORE_LIB} ${DESCRIPTOR_LIB} ${UTIL_LIB} ${FILE_LIB} ${OPTICAL_FLOW_LIB})

INSTALL(TARGETS ${TERMINAL_LIB}
    LIBRARY DESTINATION ${LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE DESTINATION ${ARCHIVE_OUTPUT_DIRECTORY}
    )
INSTALL(FILES ${HPP} DESTINATION ${INCLUDE_OUTPUT_DIRECTORY})
