FILE(GLOB CPP *.cpp)
FILE(GLOB HPP *.hpp)


ADD_LIBRARY(${TIME_LIB} ${CPP} ${HPP})

# Dependency of time lib on other libs
TARGET_LINK_LIBRARIES(${TIME_LIB} 
${OpenCV_LIBS} 
${CORE_LIB} ${FILE_LIB})

INSTALL(TARGETS ${TIME_LIB}
    LIBRARY DESTINATION ${LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE DESTINATION ${ARCHIVE_OUTPUT_DIRECTORY}
    )
INSTALL(FILES ${HPP} DESTINATION ${INCLUDE_OUTPUT_DIRECTORY})
