FILE(GLOB CPP *.cpp)
FILE(GLOB HPP *.hpp)

ADD_LIBRARY(${TRACKER_LIB} ${CPP} ${HPP})

TARGET_LINK_LIBRARIES(${TRACKER_LIB} 
${OpenCV_LIBS} 
${CORE_LIB} ${FILE_LIB})

INSTALL(TARGETS ${TRACKER_LIB}
    LIBRARY DESTINATION ${LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE DESTINATION ${ARCHIVE_OUTPUT_DIRECTORY}
    )

INSTALL(FILES ${HPP} DESTINATION ${INCLUDE_OUTPUT_DIRECTORY})
