FILE(GLOB CPP *.cpp)
FILE(GLOB HPP *.hpp)


ADD_LIBRARY(${UTIL_LIB} ${CPP} ${HPP})

TARGET_LINK_LIBRARIES(${UTIL_LIB} 
${OpenCV_LIBS} ${Boost_LIBRARIES} 
${CORE_LIB} ${FILE_LIB} 
)

INSTALL(TARGETS ${UTIL_LIB}
    LIBRARY DESTINATION ${LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE DESTINATION ${ARCHIVE_OUTPUT_DIRECTORY}
    )
INSTALL(FILES ${HPP} DESTINATION ${INCLUDE_OUTPUT_DIRECTORY})
